# ataleof2agents

./: .dockerignore  .env.example  .gitignore  AGENT_FRAMEWORK_UPDATE.md  CODE_CONSISTENCY_VALIDATION.md  DEPLOYMENT.md  Dockerfile.agent  Dockerfile.container-app  Dockerfile.function  Dockerfile.weather-api  ENV_CONFIGURATION_UPDATE.md  FOUNDRY-DEPLOYMENT-SPRINT.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  SPRINT-COMPLETION-REPORT.md  TODO.md  WORKFLOW_PATTERN.md  WORKFLOW_VALIDATION.md  agent.json  build-and-push.ps1  caphost-proj.json  caphost.json  main.py  pyproject.toml  test-local.ps1
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
archive/: CODE_CONSISTENCY_VALIDATION.md  DEMO-READINESS-SPRINT.md  DEMO-VERIFICATION-CHECKLIST.md  ENV_CONFIGURATION_UPDATE.md  FOUNDRY-DEPLOYMENT-CHECKLIST.md  FOUNDRY-DEPLOYMENT-SPRINT.md  IMPLEMENTATION_STATUS.md  SPRINT-COMPLETION-REPORT.md  WORKFLOW_PATTERN.md  WORKFLOW_VALIDATION.md  comparison-report.md
deploy/container-app/: README.md  deploy.ps1  main.bicep
deploy/foundry/: README.md  (+4 more)
docs/: AGENT-FRAMEWORK-FOUNDRY-INTEGRATION.md  DEPLOYMENT-CONTAINER-APPS.md  DEPLOYMENT-FOUNDRY.md  FOUNDRY-DEPLOYMENT-CHECKLIST.md  FOUNDRY-DEPLOYMENT-PLAN.md  README.md  REFACTORING-PHASES.md  SPRINT-PREP-COMPLETE.md  UNIFIED-AGENT.md  WORKFLOW-INTEGRATION-PATTERNS.md  WORKFLOW-ORCHESTRATION-PATTERNS.md  workflow-patterns-results.json
samples/: README.md  add_openapi_tool.py  create_simple_agent.py
tests/: README.md  test_container_agent.py  test_foundry_agent.py  test_unified_agent.py
(+70 files in other folders)
